syntax = "proto3";

import 'nanopb.proto';

// Defines the format of node settings
message NodeSettings {
    // The settings version, used for migrations
    uint32 version = 1;

    // The name of the node, short but descriptive!
    string node_name = 2 [(nanopb).max_length = 32];

    // The contact person for this node
    string node_contact = 3 [(nanopb).max_length = 32];

    // The last known coordinates of the node
    // If they have never been set automatically or manually, these are both 0.
    float location_lat = 4;
    float location_long = 5;

    // The password for the config mode WiFi (min. 8 characters)
    string wifi_password = 6 [(nanopb).max_length = 16];

    // The time between each wake in seconds
    uint32 wake_interval = 7;

    // LoRaWAN EUIs (little-endian)
    bytes app_eui = 8 [(nanopb).max_size = 8, (nanopb).fixed_length = true];
    bytes dev_eui = 9 [(nanopb).max_size = 8, (nanopb).fixed_length = true];

    // LoRaWAN application key (big-endian)
    bytes app_key = 10 [(nanopb).max_size = 16, (nanopb).fixed_length = true];

    // LoRaWAN join status
    bool joined = 11;
    bytes dev_address = 12 [(nanopb).max_size = 4, (nanopb).fixed_length = true];
    bytes nwk_session_key = 13 [(nanopb).max_size = 16, (nanopb).fixed_length = true];
    bytes app_session_key = 14 [(nanopb).max_size = 16, (nanopb).fixed_length = true];

    // Link-check Mode
    bool link_check_enabled = 15;

    // Adaptive Data Rate
    bool adr_enabled = 16;

    // Manual settings (only use when ADR is disabled)
    uint32 spreading_factor = 17;
    sint32 tx_power = 18;
}